新增管理员相关接口的编写
